crates/ruff_python_parser/tests/snapshots/invalid_syntax@try_stmt_mixed_except_kind.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/try_stmt_mixed_except_kind.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..242,
        body: [
            Try(
                StmtTry {
                    node_index: NodeIndex(None),
                    range: 0..63,
                    inner: StmtTryInner {
                        body: [
                            Pass(
                                StmtPass {
                                    node_index: NodeIndex(None),
                                    range: 9..13,
                                },
                            ),
                        ],
                        handlers: [
                            ExceptHandler(
                                ExceptHandlerExceptHandler {
                                    range: 14..30,
                                    node_index: NodeIndex(None),
                                    type_: None,
                                    name: None,
                                    body: [
                                        Pass(
                                            StmtPass {
                                                node_index: NodeIndex(None),
                                                range: 26..30,
                                            },
                                        ),
                                    ],
                                },
                            ),
                            ExceptHandler(
                                ExceptHandlerExceptHandler {
                                    range: 31..63,
                                    node_index: NodeIndex(None),
                                    type_: Some(
                                        Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 39..53,
                                                id: Name("ExceptionGroup"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                    name: None,
                                    body: [
                                        Pass(
                                            StmtPass {
                                                node_index: NodeIndex(None),
                                                range: 59..63,
                                            },
                                        ),
                                    ],
                                },
                            ),
                        ],
                        orelse: [],
                        finalbody: [],
                        is_star: false,
                    },
                },
            ),
            Try(
                StmtTry {
                    node_index: NodeIndex(None),
                    range: 64..127,
                    inner: StmtTryInner {
                        body: [
                            Pass(
                                StmtPass {
                                    node_index: NodeIndex(None),
                                    range: 73..77,
                                },
                            ),
                        ],
                        handlers: [
                            ExceptHandler(
                                ExceptHandlerExceptHandler {
                                    range: 78..110,
                                    node_index: NodeIndex(None),
                                    type_: Some(
                                        Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 86..100,
                                                id: Name("ExceptionGroup"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                    name: None,
                                    body: [
                                        Pass(
                                            StmtPass {
                                                node_index: NodeIndex(None),
                                                range: 106..110,
                                            },
                                        ),
                                    ],
                                },
                            ),
                            ExceptHandler(
                                ExceptHandlerExceptHandler {
                                    range: 111..127,
                                    node_index: NodeIndex(None),
                                    type_: None,
                                    name: None,
                                    body: [
                                        Pass(
                                            StmtPass {
                                                node_index: NodeIndex(None),
                                                range: 123..127,
                                            },
                                        ),
                                    ],
                                },
                            ),
                        ],
                        orelse: [],
                        finalbody: [],
                        is_star: true,
                    },
                },
            ),
            Try(
                StmtTry {
                    node_index: NodeIndex(None),
                    range: 128..241,
                    inner: StmtTryInner {
                        body: [
                            Pass(
                                StmtPass {
                                    node_index: NodeIndex(None),
                                    range: 137..141,
                                },
                            ),
                        ],
                        handlers: [
                            ExceptHandler(
                                ExceptHandlerExceptHandler {
                                    range: 142..158,
                                    node_index: NodeIndex(None),
                                    type_: None,
                                    name: None,
                                    body: [
                                        Pass(
                                            StmtPass {
                                                node_index: NodeIndex(None),
                                                range: 154..158,
                                            },
                                        ),
                                    ],
                                },
                            ),
                            ExceptHandler(
                                ExceptHandlerExceptHandler {
                                    range: 159..175,
                                    node_index: NodeIndex(None),
                                    type_: None,
                                    name: None,
                                    body: [
                                        Pass(
                                            StmtPass {
                                                node_index: NodeIndex(None),
                                                range: 171..175,
                                            },
                                        ),
                                    ],
                                },
                            ),
                            ExceptHandler(
                                ExceptHandlerExceptHandler {
                                    range: 176..208,
                                    node_index: NodeIndex(None),
                                    type_: Some(
                                        Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 184..198,
                                                id: Name("ExceptionGroup"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                    name: None,
                                    body: [
                                        Pass(
                                            StmtPass {
                                                node_index: NodeIndex(None),
                                                range: 204..208,
                                            },
                                        ),
                                    ],
                                },
                            ),
                            ExceptHandler(
                                ExceptHandlerExceptHandler {
                                    range: 209..241,
                                    node_index: NodeIndex(None),
                                    type_: Some(
                                        Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 217..231,
                                                id: Name("ExceptionGroup"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                    name: None,
                                    body: [
                                        Pass(
                                            StmtPass {
                                                node_index: NodeIndex(None),
                                                range: 237..241,
                                            },
                                        ),
                                    ],
                                },
                            ),
                        ],
                        orelse: [],
                        finalbody: [],
                        is_star: false,
                    },
                },
            ),
        ],
    },
)
```
## Errors

  |
3 |   except:
4 |       pass
5 | / except* ExceptionGroup:
6 | |     pass
  | |________^ Syntax Error: Cannot have both 'except' and 'except*' on the same 'try'
7 |   try:
8 |       pass
  |


   |
 9 |   except* ExceptionGroup:
10 |       pass
11 | / except:
12 | |     pass
   | |________^ Syntax Error: Cannot have both 'except' and 'except*' on the same 'try'
13 |   try:
14 |       pass
   |


   |
17 |   except:
18 |       pass
19 | / except* ExceptionGroup:
20 | |     pass
   | |________^ Syntax Error: Cannot have both 'except' and 'except*' on the same 'try'
21 |   except* ExceptionGroup:
22 |       pass
   |


   |
19 |   except* ExceptionGroup:
20 |       pass
21 | / except* ExceptionGroup:
22 | |     pass
   | |________^ Syntax Error: Cannot have both 'except' and 'except*' on the same 'try'
   |
